fix wrong margin position

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,10 +76,6 @@ body {
     margin-bottom: 2vh;
 }
 
-.title2 {
-    margin-left: 5vw;
-}
-
 #filter-text {
     font-weight: 900;
     font-size: 24px;
